# wxcode

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/awx/: CMakeLists.txt  example.cpp  example.h
examples/ledbargraph/: CMakeLists.txt  example.cpp  example.h  main.cpp
include/wx/ledbargraph/: ledbargraph.h
include/wx/treelistctrl/: treelistctrl.h
include/wxcode/awx/: led.h
include/wxcode/ledbargraph/: ledbargraph.h
include/wxcode/plotctrl/: fparser.h  lm_lsqr.h  plotctrl.h  plotcurv.h  plotdata.h  plotdraw.h  plotfunc.h  plotmark.h  plotprnt.h
include/wxcode/things/: block.h  bmpcombo.h  dropdown.h  filebrws.h  genergdi.h  geometry.h  matrix2d.h  menubtn.h  optvalue.h  range.h  spinctld.h  toggle.h
include/wxcode/treelistctrl/: treelistctrl.h
plugin/: wxcode.cpp
plugin/wxcode/xml/: wxcode.cppcode  wxcode.luacode  wxcode.phpcode  wxcode.pythoncode  wxcode.xml
src/awx/: led.cpp
src/ledbargraph/: ledbargraph.cpp
src/plotctrl/: fourier.c  fparser.cpp  lm_lsqr.cpp  plotctrl.cpp  plotcurv.cpp  plotdata.cpp  plotdraw.cpp  plotfunc.cpp  plotmark.cpp  plotprnt.cpp
src/things/: block.cpp  bmpcombo.cpp  dropdown.cpp  filebrws.cpp  genergdi.cpp  geometry.cpp  matrix2d.cpp  menubtn.cpp  optvalue.cpp  range.cpp  spinctld.cpp  toggle.cpp
src/treelistctrl/: treelistctrl.cpp
